# CppMatrix

./: .clang-format  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yaml
cnn/: CMakeLists.txt  adapter.cpp  adapter.cppm  buffer.cpp  dimension.cpp  instance.cpp  log.cpp  matrix.cpp  module.cpp  promise.cpp  ref_ptr.cpp  shape.cpp  tensor.cpp
example/: CMakeLists.txt  main.cpp  ref.cpp
example/hexapawn-zero/: CMakeLists.txt  README.md  hexapawn_zero.module.cpp  mnx_generateTrainingData.cpp  mnx_minimax.cpp  sup_network.cpp
example/hexapawn-zero/common/: CMakeLists.txt  board.cpp  game.cpp  module.cpp
example/hexapawn-zero/keras/: CMakeLists.txt  dense.cpp  input.cpp  keras.module.cpp  layer.cpp  losses.cpp  model.cpp  shape.cpp
example/mnist/: CMakeLists.txt  main.cpp  network.cpp  neural_network.cpp
gpu/: CMakeLists.txt  adapter.cpp  adapter.cppm  buffer.cpp  context.cpp  gpu_ref_ptr.cpp  instance.cpp  module.cpp  promise.cpp  ref_ptr.cpp
src/: CMakeLists.txt  adapter.cpp  adapter.cppm  cpu_matrix.cpp  gpu_adapter.cpp  gpu_compute_core.cpp  gpu_instance.cpp  gpu_matrix.cpp  gpu_matrix.cu  gpu_ref_ptr.cpp  host_matrix.cpp  instance.cpp  log.cpp  matrix.cpp  matrix_type.cpp  module.cpp  promise.cpp  ref_ptr.cpp  shape.cpp  std_patch.cpp  std_patch.h  webgpu_matrix.cpp
src/backend/: cpu_matrix.cpp  webgpu_matrix.cpp
src/webgpu/: CMakeLists.txt  gpu_adapter.cpp  gpu_compute_core.cpp  gpu_instance.cpp  gpu_ref_ptr.cpp  module.cpp  webgpu.cpp
test/: CMakeLists.txt  cpu_matrix_float16_test.cpp  cpu_matrix_float32_test.cpp  cpu_matrix_test.cpp  gpu_matrix_float16_test.cpp  gpu_matrix_float32_test.cpp  gpu_matrix_test.cpp  gpu_test.cpp  host_matrix_test.cpp  main.cpp  matrix_test.cpp  webgpu_matrix_float16_test.cpp  webgpu_matrix_float32_test.cpp
